crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__simple_derive_field-solved.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"User.id\", color=forestgreen ]\n    2 [ label = \"Root#ext\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    3 [ label = \"products#ext\", shape=box, color=dodgerblue, color=forestgreen ]\n    4 [ label = \"author#ext@derive\", shape=box, color=dodgerblue, color=forestgreen ]\n    5 [ label = \"id#ext@derive\", shape=box, color=dodgerblue, color=forestgreen ]\n    6 [ label=\"\", style=dashed]\n    0 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    2 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    3 -> 4 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    4 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    6 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "User.id", steiner=1 ]
    2 [ label = "Root#ext", steiner=1 ]
    3 [ label = "products#ext", steiner=1 ]
    4 [ label = "author#ext@derive", steiner=1 ]
    5 [ label = "id#ext@derive", steiner=1 ]
    6 [ label="", style=dashed]
    0 -> 2 [ cost=0, steiner=1]
    2 -> 3 [ cost=0, steiner=1]
    3 -> 4 [ cost=0, steiner=1]
    4 -> 5 [ cost=0, steiner=1]
    5 -> 1 [ cost=0, steiner=1]
    6 -> 0 [ cost=0, steiner=0]
}
