crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__single_id-finalized-solution.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#ext\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.products\" ]\n    3 [ label = \"Product.author\" ]\n    4 [ label = \"User.id\" ]\n    5 [ label = \"Product.authorId\" ]\n    0 -> 1 [ color=royalblue,fontcolor=royalblue ]\n    5 -> 4 [ color=darkorchid,arrowhead=halfopen,style=dashed ]\n    2 -> 3 [  ]\n    3 -> 4 [  ]\n    2 -> 5 [  ]\n    1 -> 2 [  ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#ext" ]
    2 [ label = "Query.products" ]
    3 [ label = "Product.author" ]
    4 [ label = "User.id" ]
    5 [ label = "Product.authorId" ]
    0 -> 1 [ label = "QueryPartition" ]
    5 -> 4 [ label = "Derive" ]
    2 -> 3 [ label = "Field" ]
    3 -> 4 [ label = "Field" ]
    2 -> 5 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
}
