crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__derive__single_id-solver.snap
---
source: crates/engine/query-solver/src/tests/derive.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"User.id\", style=dashed ]\n    2 [ label = \"Root#ext\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    3 [ label = \"products#ext\", shape=box, color=dodgerblue, style=dashed ]\n    4 [ label = \"author#ext@derive\", shape=box, color=dodgerblue, style=dashed ]\n    5 [ label = \"id#ext@derive\", shape=box, color=dodgerblue, style=dashed ]\n    0 -> 2 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    2 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "User.id", steiner=0 ]
    2 [ label = "Root#ext", steiner=0 ]
    3 [ label = "products#ext", steiner=0 ]
    4 [ label = "author#ext@derive", steiner=0 ]
    5 [ label = "id#ext@derive", steiner=0 ]
    0 -> 2 [ cost=1, steiner=0]
    2 -> 3 [ cost=0, steiner=0]
    3 -> 4 [ cost=0, steiner=0]
    4 -> 5 [ cost=0, steiner=0]
    5 -> 1 [ cost=0, steiner=0]
}
